force-app/main/default/objects/Portfolio_Assignment__c/Portfolio_Assignment__c.object-meta.xml
<CustomObject>
    <description>An assignment of one proposal to one portfolio</description>
    <label>Portfolio Assignment</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Portfolio Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>