force-app/main/default/objects/Portfolio_Assignment__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The recommended amount budgeted to the linked portfolio (part or all of the Amount Recommended of the linked proposal)</description>
    <inlineHelpText>The recommended amount budgeted to the linked portfolio (part or all of the Amount Recommended of the linked proposal)</inlineHelpText>
    <label>Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>