force-app/main/default/objects/Portfolio_Assignment__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <description>Portfolio to which this &quot;join&quot; assignment record is assigned</description>
    <inlineHelpText>Portfolio to which this &quot;join&quot; assignment record is assigned</inlineHelpText>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Portfolio Assignments</relationshipLabel>
    <relationshipName>Portfolio_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>