force-app/main/default/objects/Portfolio_Assignment__c/fields/Portfolio_type__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_type__c</fullName>
    <description>The type of the linked portfolio</description>
    <formula>TEXT(Portfolio__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The type of the linked portfolio</inlineHelpText>
    <label>Portfolio type</label>
    <type>Text</type>
</CustomField>