force-app/main/default/objects/Portfolio_Assignment__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <description>Proposal to which this &quot;join&quot; assignment record is assigned</description>
    <inlineHelpText>Proposal to which this &quot;join&quot; assignment record is assigned</inlineHelpText>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Portfolio Assignments</relationshipLabel>
    <relationshipName>Initiative_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>